edited BAD_CONDITION Set in Weather.java